<resources>
    <string name="app_name">PizzaCalculator</string>
    <string name="deliveryCheckbox">Delivery</string>
    <string name="addToppingButton">Add Topping</string>
    <string name="clearPizzaButton">Clear Pizza</string>
    <string name="checkoutButton">Checkout</string>
    <string name="receiptLabel">Your Order</string>
    <string name="basePriceTextView">Base Price:</string>
    <string name="basePriceValue" />
    <string name="toppingLabel">Toppings:</string>
    <string name="toppingPrice" />
    <string name="toppingNames" />
    <string name="deliveryCostLabel">Delivery Cost:</string>
    <string name="deliveryCostValue" />
    <string name="totalLabel">TOTAL:</string>
    <string name="totalValue" />
    <string name="finishButton">Finish</string>
</resources>
